--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,20 @@
     <color name="bg_color2">#203A43</color>
     <color name="bg_color3">#2C5364</color>
 
+    <color name="app_background">#0A1D3D</color>
+    <color name="app_background_light">#11284C</color>
+    <color name="app_alert_red">#A00000</color>
+
+    <color name="sf_background">#11284C</color>
+    <color name="sf_navy">#0A1D3D</color>
+    <color name="sf_fire_orange">#FF6B00</color>
+    <color name="sf_warm_orange">#FFA000</color>
+    <color name="sf_amber">#FFB300</color>
+    <color name="sf_yellow_soft">#FFD67C</color>
+    <color name="sf_red_deep">#A00000</color>
+    <color name="sf_cream">#FFF1D6</color>
+
+
 </resources>
 
 
